fix for ig modal sizing on mobile

--- a/src/app/instagram/insta-modal.component.scss
+++ b/src/app/instagram/insta-modal.component.scss
@@ -32,7 +32,7 @@
       display: inline-block;
       padding: 0px;
       position: relative;
-      top: 30px;
+      top: 0px;
       max-height: 90%;
     }
   }
